# DataSearch-Pro

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  format.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src/routes/settings/: +page.svelte
