[package]
name = "datasearch-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["RalfKit"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "datasearch_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
include_dir = "0.7.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = { version = "2.4.5", features = ["watch"] }
sentry = "0.46.1"
sentry-log = "0.46.1"
log = "0.4.29"
tauri-plugin-process = "2.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"

[profile.dev]
opt-level = 1          # Aktiviert ein wenig Optimierung für schnelleren Code, ohne lange Build-Zeiten.
incremental = true     # Behalte inkrementelle Builds.
debug = true           # Debug-Infos bleiben aktiv.
overflow-checks = true # Sicherheitschecks bleiben an.
lto = false            # Link-Time-Optimization für Dev unnötig.
codegen-units = 256    # Erlaubt paralleleres Kompilieren.
panic = "unwind"       # Im Dev lieber vollständige Panic-Infos.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

